src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;


*::-webkit-scrollbar {
  width: 0.3em;
  height: 0.3em;
}

@media screen and (max-width: 768px) {
  *::-webkit-scrollbar {
    display: none;
  }
}

*::-webkit-scrollbar-track {
  display: none;
}

*::-webkit-scrollbar-thumb {
  background: rgba(49, 130, 122, 0.3);
  border-radius: 0.8em;
}

*::-webkit-scrollbar-thumb:hover {
  background: rgba(49, 130, 122, 0.76);
}

*::-webkit-scrollbar-track {
  position: absolute;
  top: 0;
}

* {
  text-overflow: ellipsis;
  box-sizing: border-box;
}

@layer utilities {
  .text-shadow-black {
    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
  }
}

body {
  width: 100vw;
  font-family: 'Poppins', sans-serif;
}

.btn-class {
  @apply border text-shadow-black text-white p-2 text-[14px] bg-primary sm:w-[280px] 
         mt-2 rounded-md outline-none shadow-md transition duration-300  hover:bg-purple-600 
}

a.active {
  @apply  border-primary;
}

.my-swal {
  font-size: 12px; /* Decrease the font size for the whole dialog */
}

.my-swal .swal2-title {
  font-size: 16px; /* Decrease the font size for the title */
}

.my-swal .swal2-content {
  font-size: 14px; /* Decrease the font size for the content */
}

.my-swal .swal2-actions .swal2-confirm {
  font-size: 14px; /* Decrease the font size for the confirm button */
  width: 128px;
  padding: 6px 12px; /* Decrease the padding for the confirm button */
}

.my-swal .swal2-actions .swal2-cancel {
  font-size: 14px; /* Decrease the font size for the cancel button */
  padding: 6px 12px; /* Decrease the padding for the cancel button */
}

@keyframes spin-50 {
  0% {
    transform: rotate(0);
  }
  50% {
    transform: rotate(180deg);
  }
  100% {
    transform: rotate(360deg);
  }
}
.hide-scroll-bar {
    -ms-overflow-style: none;
  }
  
  /* Hide the scrollbar for WebKit browsers (like Chrome and Safari) */
  .hide-scroll-bar::-webkit-scrollbar {
    display: none;
  }
  
  .card-mover:hover {
    transform: scale(1.2); /* Increase the size by 20% on hover */
  }

  .loaderBar {
  width: calc(160px / 0.707);
  height: 10px;
  background: #F9F9F9;
  border-radius: 10px;
  border: 1px solid #006DFE;
  position: relative;
  overflow: hidden;
}

.loaderBar::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  border-radius: 5px;
  background: repeating-linear-gradient(45deg, #0031F2 0 30px, #006DFE 0 40px) right/200% 100%;
  animation: fillProgress 6s ease-in-out infinite, lightEffect 1s infinite linear;
  animation-fill-mode: forwards;
}


@keyframes fillProgress {
  0% {
    width: 0;
  }

  33% {
    width: 33.333%;
  }

  66% {
    width: 66.67%;
  }

  100% {
    width: 100%;
  }
}

@keyframes lightEffect {
  0%, 20%, 40%, 60%, 80%, 100% {
    background: repeating-linear-gradient(45deg, #0031F2 0 30px, #006DFE 0 40px) right/200% 100%;
  }

  10%, 30%, 50%, 70%, 90% {
    background: repeating-linear-gradient(45deg, #0031F2 0 30px, #006DFE 0 40px, rgba(255, 255, 255, 0.3) 0 40px) right/200% 100%;
  }
}

